# griptape-black-forest

./: README.md  pyproject.toml
examples/drivers/: example_agent.py  example_agent_canny.py  example_agent_depth.py  example_agent_inpainting.py  example_agent_outpainting.py  example_agent_variation.py
griptape/black_forest/drivers/: black_forest_image_generation_driver.py
tests/unit/: test_black_forest_image_generation_driver.py
